# kalshi_dashboard

./: .dockerignore  .gitignore  CHANGELOG  DESIGN.md  Dockerfile  LICENSE  PROJECT_IDEAS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_get_markets.py  test_markets.py  tickers.txt
cloud/: architecture.mmd  deploy-scheduler-template.sh
market_data/KXCPIYOY/CPIYOY-22DEC/: CPIYOY-22DEC-T6.0.json  CPIYOY-22DEC-T6.1.json  CPIYOY-22DEC-T6.2.json  CPIYOY-22DEC-T6.3.json  CPIYOY-22DEC-T6.4.json  CPIYOY-22DEC-T6.5.json  CPIYOY-22DEC-T6.6.json  CPIYOY-22DEC-T6.7.json  CPIYOY-22DEC-T6.8.json  CPIYOY-22DEC-T6.9.json  CPIYOY-22DEC-T7.0.json  CPIYOY-22DEC-T7.1.json  CPIYOY-22DEC-T7.2.json  CPIYOY-22DEC-T7.3.json  CPIYOY-22DEC-T7.4.json
market_data/KXCPIYOY/CPIYOY-22NOV/: CPIYOY-22NOV-T6.8.json  CPIYOY-22NOV-T6.9.json  CPIYOY-22NOV-T7.0.json  CPIYOY-22NOV-T7.1.json  CPIYOY-22NOV-T7.2.json  CPIYOY-22NOV-T7.3.json  CPIYOY-22NOV-T7.4.json  CPIYOY-22NOV-T7.5.json  CPIYOY-22NOV-T7.6.json  CPIYOY-22NOV-T7.7.json  CPIYOY-22NOV-T7.8.json  CPIYOY-22NOV-T7.9.json  CPIYOY-22NOV-T8.0.json
market_data/KXCPIYOY/CPIYOY-23APR/: CPIYOY-23APR-T3.4.json  CPIYOY-23APR-T3.5.json  CPIYOY-23APR-T3.6.json  CPIYOY-23APR-T3.7.json  (+18 more)
src/: app.py  clients.py  core.py  data_fetcher.py  main.py  minimal_app.py
test_outputs/prod/: PROD_KXCPIYOY-25MAR-T2.5.json  PROD_KXCPIYOY-25MAR.json  PROD_KXCPIYOY.json
tests/: sample_orderbook.json  test_get_markets.py  test_imports.py  test_kalshi_client_final.py  test_markets.py
tests/test_outputs/: test_get_markets.out
(+484 files in other folders)
